// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders disabled 1`] = `
<button
  className="Button Button_theme_default "
  disabled={true}
>
  test
</button>
`;

exports[`Button renders with action theme 1`] = `
<button
  className="Button Button_theme_action "
>
  test
</button>
`;

exports[`Button renders with className added 1`] = `
<button
  className="Button Button_theme_default Wrapper-Button"
>
  test
</button>
`;

exports[`Button renders with default theme if one not provided 1`] = `
<button
  className="Button Button_theme_default "
>
  test
</button>
`;
